manifests/modules/networking/network-policies/apply-network-policies/allow-carts-ingress-fail-debug.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: carts
  name: allow-carts-ingress-webservice
spec:
  podSelector:
    matchLabels: 
      app.kubernetes.io/name: carts
      app.kubernetes.io/component: service
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app.kubernetes.io/name: ui
