manifests/modules/networking/network-policies/apply-network-policies/allow-checkout-ingress-webservice.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: checkout
  name: allow-checkout-ingress-webservice
spec:
  podSelector:
    matchLabels: 
      app.kubernetes.io/name: checkout
      app.kubernetes.io/component: service
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ui       
          podSelector:
            matchLabels:
              app.kubernetes.io/name: ui
