manifests/modules/networking/network-policies/apply-network-policies/allow-ui-egress.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  namespace: ui
  name: allow-ui-egress
spec:
  podSelector:
    matchLabels: 
      app.kubernetes.io/name: ui
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector: 
            matchLabels:
          podSelector:
            matchLabels: 
              app.kubernetes.io/component: service
        - namespaceSelector: 
            matchLabels:
              kubernetes.io/metadata.name: kube-system
